# metagf

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: build-docs.yml
docs/: demo.md  gen_ref_pages.py  index.md  refs.bib
src/metagf/: __init__.py  intde.py  momi.py  sommerfeld.py  toms468.py
